# lifting

./: README.md
api/: pyproject.toml
api/src/api/: config.py  db.py  main.py
api/src/api/models/: sets.py  workouts.py
api/src/api/routers/v1/: health.py
client/src/: package.json
database/: schema.sql  seed.sql
database/data/: exercise_seed.csv  user_profile_seed.csv  workout_item_seed.csv  workout_seed.csv  workout_set_seed.csv
