[project]
name = "api"
version = "0.1.0"
description = "Backend API for Lifting Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg>=3.2.9",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.uv]

[tool.uv.preview]
scripts = true

[tool.uv.scripts]
server = "uvicorn api.main:app --host 127.0.0.1 --port 8443 --reload --app-dir src"
